--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Title</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="css/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
+    <div id="bg" class="border-8 border-white"></div>
+    <div class="w-full h-full p-8 flex flex-col">
+        <div class="flex justify-between text-white items-center">
+            <span class="logo cursor-pointer bg-white rounded-sm p-1 font-bold" style="color: rgba(32,100,233,1)">AF</span>
+            <nav class="flex-1">
+                <ul class="flex justify-center">
+                    <li><a class="uppercase mx-1 md:mx-8 hover:underline" href="about.html">Über mich</a></li>
+                    <li><a class="uppercase mx-1 md:mx-8 hover:underline" href="#">Projekte</a></li>
+                    <li><a class="uppercase mx-1 md:mx-8 hover:underline" href="#">Kontakt</a></li>
+                </ul>
+            </nav>
+            <svg class="cursor-pointer" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 20 20" fill="white">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M3 5C3 4.44772 3.44772 4 4 4H16C16.5523 4 17 4.44772 17 5C17 5.55228 16.5523 6 16 6H4C3.44772 6 3 5.55228 3 5Z"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M3 10C3 9.44772 3.44772 9 4 9H16C16.5523 9 17 9.44772 17 10C17 10.5523 16.5523 11 16 11H4C3.44772 11 3 10.5523 3 10Z"/>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M3 15C3 14.4477 3.44772 14 4 14H16C16.5523 14 17 14.4477 17 15C17 15.5523 16.5523 16 16 16H4C3.44772 16 3 15.5523 3 15Z"/>
+            </svg>
+        </div>
+        <main class="flex flex-col justify-center text-white flex-grow">
+            <h1 class="text-6xl text-center mb-5">Hi,</h1>
+            <h2 class="text-4xl text-center">mein Name ist Adrian<br />und ich bin Java Entwickler</h2>
+            <a class="hover:bg-white hover:text-black mt-10 p-2 self-center text-3xl text-center border rounded-sm" href="about.html">Über mich</a>
+        </main>
+    </div>
+</body>
+</html>
