--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="Description" content="Profilseite von Freelancer Adrian Fiedler">
     <title>Title</title>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link href="css/tailwind.min.css" rel="stylesheet">
@@ -31,7 +32,7 @@
             <div class="flex flex-col justify-center text-white flex-grow">
                 <h1 class="text-5xl md:text-6xl text-center mb-5">Hi,</h1>
                 <h2 class="text-3xl md:text-4xl text-center">mein Name ist Adrian<br/>und ich bin Java Entwickler</h2>
-                <img id="adrian-img" class="rounded-full" src="img/adrian.jpg" width="150px" height="150px">
+                <img id="adrian-img" alt="Profilfoto Adrian" class="rounded-full" src="img/adrian.jpg" width="150px" height="150px">
                 <a id="aboutBtn"
                    class="transition-colors duration-200 hover:bg-white hover:text-black mt-10 p-2 self-center text-3xl text-center border rounded-sm"
                    href="about.html">Über mich</a>
