--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
     <div id="bg" class="fixed top-0 border-8 border-white"></div>
     <div id="header" class="p-8 fixed top-0 w-full flex justify-between sm:justify-center text-white items-center">
-        <a href="#intro" class="sm:mr-16" title="Zum Anfang scrollen">
+        <a id="introNav" href="#" class="sm:mr-16" title="Zum Anfang scrollen">
             <span id="logo" class="bg-white rounded-sm p-1 font-bold">AF</span>
         </a>
         <nav class="">
             <ul class="flex justify-center">
-                <li><a id="aboutNav" class="uppercase mx-2 md:mx-8 text-xs sm:text-base un" href="#about">Über
+                <li><a id="aboutNav" class="uppercase mx-2 md:mx-8 text-xs sm:text-base un" href="#">Über
                     mich</a></li>
-                <li><a id="projectsNav" class="uppercase mx-2 md:mx-8 text-xs sm:text-base un" href="#projects">Projekte</a></li>
+                <li><a id="projectsNav" class="uppercase mx-2 md:mx-8 text-xs sm:text-base un" href="#">Projekte</a></li>
                 <li><a class="uppercase mx-2 md:mx-8 text-xs sm:text-base un" href="#">Kontakt</a></li>
             </ul>
         </nav>
@@ -30,14 +30,14 @@
     </div>
     <main class="w-full h-full">
         <!-- intro page -->
-        <div id="intro" class="w-full h-full p-8 flex flex-col">
+        <div id="intro" class="w-full h-full px-8 pb-8 pt-16 flex flex-col">
             <div class="flex flex-col justify-center text-white flex-grow">
-                <h1 class="text-5xl md:text-6xl text-center mb-5">Hi,</h1>
-                <h2 class="text-2xl md:text-4xl text-center">mein Name ist Adrian<br/>und ich bin Java Entwickler</h2>
+                <h1 class="text-3xl md:text-6xl text-center mb-5">Hi,</h1>
+                <h2 class="text-1xl md:text-4xl text-center">mein Name ist Adrian<br/>und ich bin Java Entwickler</h2>
                 <img id="adrian-img" alt="Profilfoto Adrian" class="rounded-full" src="img/adrian.jpg" width="150px" height="150px">
                 <a id="aboutBtn"
                    class="transition-colors duration-200 hover:bg-white hover:text-black mt-12 p-2 self-center text-3xl text-center border rounded-sm"
-                   href="#about">Über mich</a>
+                   href="#">Über mich</a>
             </div>
         </div>
         <!-- about page -->
@@ -53,5 +53,36 @@
             </div>
         </div>
     </main>
+    <script>
+      // to support smooth scrolling on iOS devices
+      const ABOUT_SECTION = 'about';
+      const PROJECTS_SECTION = 'projects';
+      const INTRO_SECTION = 'intro';
+      document.getElementById('introNav').onclick = (e) => {
+        e.preventDefault();
+        scrollToSection(INTRO_SECTION);
+      };
+
+      document.getElementById('aboutNav').onclick = (e) => {
+        e.preventDefault();
+        scrollToSection(ABOUT_SECTION);
+      };
+
+      document.getElementById('aboutBtn').onclick = (e) => {
+        e.preventDefault();
+        scrollToSection(ABOUT_SECTION);
+      };
+
+      document.getElementById('projectsNav').onclick = (e) => {
+        e.preventDefault();
+        scrollToSection(PROJECTS_SECTION);
+      };
+
+      function scrollToSection(section) {
+        const element = document.getElementById(section);
+        element.scrollIntoView();
+      }
+    </script>
+    <noscript>JavaScript muss aktiviert sein um alle Funktionen nutzen zu können</noscript>
 </body>
 </html>
