test iOS smooth scroll

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
       function scrollToSection(section) {
         const element = document.getElementById(section);
-        element.scrollIntoView();
+        element.scrollIntoView(true);
       }
     </script>
     <noscript>JavaScript muss aktiviert sein um alle Funktionen nutzen zu können</noscript>
