align skill list left

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <img class="" src="img/profile2.svg" alt="Profil Illustration" width="600" height="350" >
                     <div>
                         <p>Meine Schwerpunkte liegen auf</p>
-                        <ul class="">
+                        <ul class="text-left">
                             <li>> JEE / JSF</li>
                             <li>> HTML / JavaScript</li>
                             <li>> Mobile Apps</li>
