--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                 </div>
                 <div class="text-left">
                     <p class="pt-2">Ich bin ein Java Fullstack Developer mit Schwerpunkt auf JEE und Web Apps (JSF oder reines HTML/JavaScript). Bin jedoch auch sehr an Serverless
-                        Alternativen interessiert, wie z.B. <a target="_blank" class="underline" href="https://quarkus.io/">Quarkus</a>, für das ich auch Open Source Contributor bin.
+                        Alternativen interessiert, wie z.B. <a target="_blank" rel="noopener" class="underline" href="https://quarkus.io/">Quarkus</a>, für das ich auch Open Source Contributor bin.
                         Außerdem bin ich zertifizierter SCRUM Master (<a target="_blank" class="underline" href="pdf/PSMI.pdf">Zertifikat</a>) und arbeite seit Jahren in großen agilen
-                        Projekten (Scrum + <a target="_blank" class="underline" href="https://en.wikipedia.org/wiki/Scaled_agile_framework">SAFe</a>).</p>
+                        Projekten (Scrum + <a target="_blank" rel="noopener" class="underline" href="https://en.wikipedia.org/wiki/Scaled_agile_framework">SAFe</a>).</p>
                     <p class="pt-2">Vor der Zeit als Java Entwickler, war ich spezialisiert auf mobile Apps und professioneller iOS Entwickler. Ich führe dies nun als Hobby fort und habe mehrere Apps im App Store.</p>
                     <p class="pt-2">Teil meiner UI Expertise ist es auch, Webseiten barrierefrei zu erstellen. Hier konnte ich bereits mehrere Projekte sicher durch die abschließende Prüfung auf Barrierefreiheit führen.</p>
                 </div>
